--- a/docs/webiny-overview/intro.mdx
+++ b/docs/webiny-overview/intro.mdx
@@ -6,10 +6,9 @@ keywords: ["serverless", "performance", "benchmark", "headless cms", "graphql"]
 description: Webiny Serverless CMS Intro
 ---
 
-:::tip
-What you’ll learn:
+:::tip **WHAT YOU'LL LEARN**
 
-- What can you do with Webiny, is Webiny suitable for your use-case and which features Webiny supports.
+ - What can you do with Webiny, is Webiny suitable for your use-case and which features Webiny supports.
 
 :::
 
