--- a/docs/webiny-overview/serverless-cms/apps/file-manager.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/file-manager.mdx
@@ -6,11 +6,9 @@ keywords: ["serverless", "performance", "benchmark", "headless cms", "graphql"]
 description: Learn about the Webiny File Manager features.
 ---
 
-:::tip
+:::tip **WHAT YOU'LL LEARN**
 
-What you’ll learn:
-
-- File Manager features and use-cases
+ - File Manager features and use-cases
 
 :::
 
