--- a/docs/webiny-overview/serverless-cms/apps/form-builder.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/form-builder.mdx
@@ -6,9 +6,7 @@ keywords: ["form builder", "no code form builder"]
 description: Learn about the Webiny Form Builder features.
 ---
 
-:::tip
-
-What you’ll learn:
+:::tip **WHAT YOU'LL LEARN**
 
  - Form Builder features and common use-cases
 
