--- a/docs/webiny-overview/serverless-cms/apps/headless-cms.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/headless-cms.mdx
@@ -6,11 +6,9 @@ keywords: ["headless cms", "graphql", "serverless cms", "open-source"]
 description: Webiny Serverless CMS Intro
 ---
 
-:::tip
+:::tip **WHAT YOU'LL LEARN**
 
-What you’ll learn:
-
-- Features, capabilities and, common use-cases of Webiny’s Headless CMS.
+ - Features, capabilities and, common use-cases of Webiny’s Headless CMS.
 
 :::
 
