--- a/docs/webiny-overview/serverless-cms/apps/intro.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/intro.mdx
@@ -6,11 +6,9 @@ keywords: ["serverless", "cms", "headless cms", "graphql"]
 description: Webiny Serverless CMS Intro
 ---
 
-:::tip
+:::tip **WHAT YOU'LL LEARN**
 
-What you’ll learn:
-
-- Serverless CMS apps, features and common use-cases.
+ - Serverless CMS apps, features and common use-cases.
 
 :::
 
@@ -45,7 +43,7 @@ These are the apps that make our CMS:
 
 To mention one more important differentiator between Webiny’s Serverless CMS and all other CMS’s on the market. Webiny is serverless and self-hosted. This is a unique combination. 
 
-The serverless aspect gives you low maintenance costs together with high scalability. Usually, this is reserved for SaaS solutions only, However with a SaaS solution you give away your data and your security to a 3rd party, for some that’s not an option. Additionally a SaaS solution you can’t customize and tweak to your own needs as it is usually closed-source.
+The serverless aspect gives you low maintenance costs together with high scalability. Usually, this is reserved for SaaS solutions only. However with a SaaS solution you give away your data and your security to a 3rd party. For some that’s not an option. Additionally a SaaS solution you can’t customize and tweak to your own needs as it is usually closed-source.
 
 Webiny being self-hosted, your data lives in *your* data center, and your security team has full control over it. Webiny being open-source means you can change every aspect of the platform to meet your needs. 
 
