--- a/docs/webiny-overview/serverless-cms/apps/page-builder.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/page-builder.mdx
@@ -6,9 +6,7 @@ keywords: ["page builder", "no code app builder", "landing page builder", "websi
 description: Learn about the Webiny Page Builder features.
 ---
 
-:::tip
-
-What you’ll learn:
+:::tip **WHAT YOU'LL LEARN**
 
  - Features and capabilities of Page Builder app
 
