--- a/docs/tutorials/create-an-application/admin-area-package.mdx
+++ b/docs/tutorials/create-an-application/admin-area-package.mdx
@@ -13,45 +13,111 @@ description: Quickly create and deploy Admin area package.
 
 
 ## Prerequisites
-Before you start this tutorial, make sure that you have Webiny installed and to read our [Intro](./create-an-application-intro) and [API Package](./api-package) tutorials.
+Before you start this tutorial, make sure that you have Webiny installed and to read our [Introduction](./introduction) tutorial.
 
 ## Overview
-The UI scaffold is our boilerplate code that works out of the box without you needing to actually write any code.
+The UI scaffold is our boilerplate React application that works out of the box without you needing to actually write any code.
+It will enable you to create, update and delete the data via the form and to list and view it.
 In this article we will go through the process of generating the code.
 
-The command you will need is `yarn webiny scaffold`.
+The command you will run is `yarn webiny scaffold`, and you run it from the project root.
 
-In our example we will use `CarManufacturer` as our reference.
+You will get a set of simple questions to answer and, in the end, a React application package will be generated.
 
+Also note that in this tutorial we will use `CarManufacturer` as our data model name.
 
-## Admin Area Package Scaffold
 ### Running the Scaffold
 Run the scaffold command and follow the questions. Let's go through all the questions in detail:
-##### 1. Enter the name of the initial data model
-Name of the Admin area data model. The GraphQL queries, mutations, responses, variable names in the code and files will use this value in singular and plural, kebab-case, camel-case or some other form.
 
-The name value is used to create both the defaults for the package location and the package name.
+##### 1. Enter the name of the initial data model
+This is the name of your API data model, so type it in.
+As mentioned before, we will use `CarManufacturer` in this tutorial.
+
+The GraphQL queries, mutations, responses, and variable names in the code will use this value in singular and plural, kebab-case, camel-case or some other form.
+
+```typescript
+export const LIST_CAR_MANUFACTURERS = gql`
+    query ListCarManufacturers(
+        $sort: [CarManufacturerListSort!]
+        $where: CarManufacturerListWhereInput
+        $limit: Int
+        $after: String
+    ) {
+        carManufacturers {
+            listCarManufacturers(sort: $sort, where: $where, limit: $limit, after: $after) {
+                data {
+                    id
+                    title
+                    description
+                    isNice
+                    createdOn
+                    savedOn
+                    createdBy {
+                        id
+                        displayName
+                        type
+                    }
+                }
+            }
+        }
+    }
+`;
+
+export const CREATE_CAR_MANUFACTURER = gql`
+    mutation CreateCarManufacturer($data: CarManufacturerCreateInput!) {
+        carManufacturers {
+            createCarManufacturer(data: $data) {
+                data {
+                    id
+                    title
+                    description
+                    isNice
+                    createdOn
+                    savedOn
+                    createdBy {
+                        id
+                        displayName
+                        type
+                    }
+                }
+                error {
+                    code
+                    message
+                    data
+                }
+            }
+        }
+    }
+`;
+```
+
+The name value is also used to create both the defaults for the package location and the package name.
 
 The initial data model has 3 fields (`title`, `description` and `isNice`) to show you how to structure your data model.
 
-Validation of the data model name allows only a-z and A-Z.
+Validation of the data model name allows only **a-z** and **A-Z**.
 You can name your model all lowercase or all uppercase. It is up to you - but try to keep it in pascal-case.
 
 ##### 2. Enter the package location
-A full location of the package from the root of the project. A data model name value given in the previous question is used to create the default package location.
+A full location of the package, where the package files will be generated, from the root of the project.
+:::info
+The value given in the previous question is used to create the default package location.
+:::
 
-We think it is best to organize your packages in `packages` directory, so by default it is set into that directory, but you can change it to whatever you want.
+We think it is best to organize your packages in `packages` directory, so by default it is set into that directory, but you can type whatever location you want.
+:::note
+To learn more about Webiny's project organization, checkout [this](../../key-topics/project-organization/project-applications-and-packages) article.
+:::
 
 The default value is `packages/car-manufacturers/admin-app`. Notice that the data model name `CarManufacturer` is in plural and kebab-cased.
 
-Validation of the package location checks only if the given directory already exists.
-
 ##### 3. Enter the package name
-The package name that you reference to in the code. As in the location step, the data model name value is used to create the default package name.
+The package name that you will reference to in the code.
+:::info
+As in the location step, the value from the first question is used to create the default package name.
+:::
 
 The default value is `@car-manufacturers/admin-app` as we like scoping packages. You can set it to what ever you want, providing it is passing the validation.
-
-Validation of the package name is done via the `validate-npm-package-name` package.
 
 ### The Code
 Generated code contains:
@@ -173,7 +239,7 @@ You can even have a watcher running for your code with `yarn webiny ws run watch
 Of course, the `folder` value is your package location.
 
 ### Run locally
-Unlike the API, you can run the UI locally:
+Unlike the API, you can run the React application locally:
 1. `cd apps/admin/code`
 2. `yarn start --env=YOUR_ENVIRONMENT`
 
@@ -181,7 +247,7 @@ This will start the local build of the Admin app. Also, it will automatically re
 
 
 ### Deploy the Admin App
-Use the command to deploy the admin app:
+To use the generated React application online, you must deploy it. To deploy, use the command:
 ```
 yarn webiny deploy apps/admin --env YOUR_ENVIRONMENT
 ```
