fix(tutorials): urls

--- a/docs/tutorials/create-an-application/api-package.mdx
+++ b/docs/tutorials/create-an-application/api-package.mdx
@@ -26,7 +26,7 @@ You will get a set of simple questions to answer and, in the end, an API package
 Also note that in this tutorial we will use `CarManufacturer` as our data model name.
 
 ## Running the Scaffold
-Run the scaffold command and follow the questions. Let's go through all the questions in detail:
+Run the scaffold command and follow the questions. Select the `GraphQL API package` option and let's go through all the questions in detail:
 ##### 1. Enter the name of the initial data model
 This is the name of your API data model, so type it in.
 As mentioned before, we will use `CarManufacturer` in this tutorial.
@@ -65,7 +65,7 @@ The value given in the previous question is used to create the default package l
 
 We think it is best to organize your packages in `packages` directory, so by default it is set into that directory, but you can type whatever location you want.
 :::note
-To learn more about Webiny's project organization, checkout [this](../../key-topics/project-organization/project-applications-and-packages) article.
+To learn more about Webiny's project organization, checkout [this](/docs/key-topics/project-organization/project-applications-and-packages) article.
 :::
 
 The default value is `packages/car-manufacturers/api`, and notice that the data model name `CarManufacturer` is in plural and kebab-cased.
