--- a/docs/tutorials/create-an-application/introduction.mdx
+++ b/docs/tutorials/create-an-application/introduction.mdx
@@ -16,7 +16,7 @@ description: Introduction into how to quickly create and deploy API and Admin ar
 
 Before you start this tutorial, make sure that you have Webiny installed.
 
-You can read on how to install it in our [Install Webiny](../install-webiny) article.
+You can read on how to install it in our [Install Webiny](/docs/tutorials/install-webiny) article.
 
 ## Scaffold
 
@@ -30,7 +30,7 @@ All scaffolds have a wizard that guides you through the process by asking you a 
 More on that in the actual tutorial.
 
 :::note
-You can add your own custom scaffolds by building a [CLI plugin](../webiny-cli/adding-custom-commands) and using the current scaffold plugin as a [reference](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/src/index.ts).
+You can add your own custom scaffolds by building a [CLI plugin](/docs/tutorials/webiny-cli/adding-custom-commands) and using the current scaffold plugin as a [reference](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/src/index.ts).
 :::
 
 ## Workspaces
