fix(tutorials): introduction

--- a/docs/tutorials/create-an-application/introduction.mdx
+++ b/docs/tutorials/create-an-application/introduction.mdx
@@ -35,16 +35,13 @@ You can add your own custom scaffolds by building a [CLI plugin](/docs/tutorials
 
 ## Workspaces
 
-For you to be able to import the generated packages into your application they must be linked to the `node_modules`.
-It is done automatically by our [linkWorkspaces](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/scripts/linkWorkspaces.js) script and is called by `yarn postinstall`.
-Also, you can run `yarn link-workspaces` manually to link the packages.
+We link all our packages to `node_modules` via workspaces (read about them in yarn [docs](https://classic.yarnpkg.com/en/docs/workspaces/)), so we can use their name to import them in our applications.
+Packages are linked by default via `yarn postinstall`. If you want to link them manually, run `yarn link-packages`.
+:::note
+By default, the packages located in `./packages/` directory are linked. If you want to create a package that is outside that directory, you must add yours to the linkPackages script.
 
-To find out more about workspaces read the official yarn [docs](https://classic.yarnpkg.com/en/docs/workspaces/).
-
-Remember, packages you want to link must be in root **package.json** `workspaces.packages` array.
-
-:::warning
-If you are creating packages in a directory that is not your projects `./packages/` directory, you must add that directory to the `whitelist` array in the `./scripts/linkWorkspaces.js`, otherwise linking will not work.
+The script is located in `./scripts/linkWorkspaces.js`. You must add your directory into the `whitelist` array, otherwise package linking will not pick up your packages.
 :::
+
 
 
