fix: replace "it" with "if"

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -71,7 +71,7 @@ This is the core of Webiny. It's a framework created specifically for building s
 The goal of the framework is to provide a ready-made solution that you can use in a matter of minutes. Developers should no longer deal with the complexities that come with using serverless infrastructure.
 
 :::caution Cloud support
-At the moment Webiny only runs on the AWS cloud. It you wish to help us add support for another cloud provider, please see [this issue](https://github.com/webiny/webiny-js/issues/1150).
+At the moment Webiny only runs on the AWS cloud. If you wish to help us add support for another cloud provider, please see [this issue](https://github.com/webiny/webiny-js/issues/1150).
 :::
 
 #### Serverless CMS
