fix: temporary comment out a sentence

--- a/docs/key-topics/ci-cd.mdx
+++ b/docs/key-topics/ci-cd.mdx
@@ -62,7 +62,7 @@ Last but certainly not the least, we reach the **operate** and **monitor** phase
 
 In general, monitoring severless applications has shown to be a bit harder than monitoring "traditional" applications, mainly because of their distributed nature. They are almost always constructed out of several services that talk to each other and trying to find the service that is the root cause of a new issue can be hard. Fortunately, there are tools and services that assist us in this regard as well, for example [AWS CloudWatch](https://aws.amazon.com/cloudwatch/) and [AWS X-ray](https://aws.amazon.com/xray/), [Lumigo](https://lumigo.io/), [Epsagon](https://epsagon.com/product/), and others.
 
-And this completes the CI/CD workflow. Once we've passed through all of the steps, the whole workflow starts from the beginning, and it is repeating infinitely as part of our project development process. Note that the explained phases shouldn't be considered as a hard rule - certain phases can be implemented in different ways and adjusted to your needs. Be sure to check the [CI/CD How-To Guide](/docs/how-to-guides/ci-cd/introduction) for more practical information on how to set up a CI/CD workflow for your Webiny project.
+And this completes the CI/CD workflow. Once we've passed through all of the steps, the whole workflow starts from the beginning, and it is repeating infinitely as part of our project development process. Note that the explained phases shouldn't be considered as a hard rule - certain phases can be implemented in different ways and adjusted to your needs. <!-- Be sure to check the [CI/CD How-To Guide](/docs/how-to-guides/ci-cd/introduction) for more practical information on how to set up a CI/CD workflow for your Webiny project. -->
 
 ## FAQ
 
