--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -12,7 +12,9 @@ import { Box, Button, Heading, Grid, Link, Badge } from "theme-ui";
 
 <Theme>
 
-Welcome! 👋 **Webiny** is a JavaScript serverless application framework with a built-in CMS. We created Webiny specifically to help developers architect, build and deploy solutions on top of the serverless infrastructure, like AWS Lambda, DynamoDB, S3, and others. Support for other cloud vendors besides AWS is coming.
+Welcome! 👋
+
+**Webiny** is a JavaScript serverless application framework with a built-in CMS. We created Webiny specifically to help developers architect, build and deploy solutions on top of the serverless infrastructure, like AWS Lambda, DynamoDB, S3, and others. Support for other cloud vendors besides AWS is coming.
 
 We believe that serverless is the future of development. There are many tools that help you deploy and monitor an app on top of the serverless infrastructure. Those tools do that well. But when it comes to architecting and coding an application your set of options is very limited. This is where Webiny comes in.
 
