fix: link workspaces guide

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -22,7 +22,7 @@ To learn more about project organization, check out the [Project Applications an
 
 ## Before We Begin
 
-Before we begin, it's worth mentioning that the deployment commands shown below also build your application code. They perform this task by just running the following **workspaces** command:
+Before we begin, it's worth mentioning that the deployment commands shown below also build your application code. They perform this task by just running the following [`workspaces run`](/docs/how-to-guides/webiny-cli/working-with-workspaces) command:
 
 ```
 yarn webiny workspaces run build --folder {STACK_FOLDER}
