fix: reorganize and add link to AWS Credentials page

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -16,19 +16,10 @@ description: Learn how to deploy your Webiny project and its project application
 
 Webiny makes it easy to deploy your project, using the [Webiny CLI](/docs/key-topics/webiny-cli) and [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) as the default infrastructure as code and deployment solution. You can also easily deploy your project into multiple [environments](/docs/key-topics/deployment/environments), which is covered in this guide as well.
 
-:::info
-To learn more about project organization, check out the [Project Applications and Packages](/docs/key-topics/project-organization/project-applications-and-packages) and [Project Applications](/docs/key-topics/project-organization/project-applications) key topics. To learn more about deployments in general, check out the [Deployment](/docs/key-topics/deployment/introduction) key topics section.
-:::
+## AWS Credentials
+In order to deploy your Webiny project, you need to have AWS Credentials properly configured on your machine. Furthermore, you can also deploy your project using a specific AWS profile.
 
-## Before We Begin
-
-Before we begin, it's worth mentioning that the deployment commands shown below also build your application code. They perform this task by just running the following [`workspaces run`](/docs/how-to-guides/webiny-cli/working-with-workspaces) command:
-
-```
-yarn webiny workspaces run build --folder {STACK_FOLDER}
-```
-
-The command first finds all packages that are located in the project application folder. Then, for every found package, it runs the `build` command that's specified in the `webiny.config.js` - a configuration file that every package possesses. If the `build` command is defined, it gets executed, otherwise, the process just continues with the next package.
+Feel free to check out our [Configure AWS Credentials](/docs/how-to-guides/deployment/configure-aws-credentials) guide to learn more.
 
 ## The `deploy` Command
 
@@ -75,6 +66,16 @@ yarn webiny deploy apps/site --env dev
 ```
 
 Note that when deploying a specific project application, the environment (`--env`) argument is not optional, it must always be set.
+
+## Building the Application Code
+
+It's worth mentioning that the deployment commands shown above also build your application code. They perform this task by just running the following [`workspaces run`](/docs/how-to-guides/webiny-cli/working-with-workspaces) command:
+
+```
+yarn webiny workspaces run build --folder {STACK_FOLDER}
+```
+
+The command first finds all packages that are located in the project application folder. Then, for every found package, it runs the `build` command that's specified in the `webiny.config.js` - a configuration file that every package possesses. If the `build` command is defined, it gets executed, otherwise, the process just continues with the next package.
 
 ## Troubleshooting
 
