fix: reword sentence

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -19,7 +19,7 @@ Webiny makes it easy to deploy your project, using the [Webiny CLI](/docs/key-to
 ## AWS Credentials
 In order to deploy your Webiny project, you need to have AWS Credentials properly configured on your machine. Furthermore, you can also deploy your project using a specific AWS profile.
 
-Feel free to check out our [Configure AWS Credentials](/docs/how-to-guides/deployment/configure-aws-credentials) guide to learn more.
+To learn more, please check out the [Configure AWS Credentials](/docs/how-to-guides/deployment/configure-aws-credentials) guide.
 
 ## The `deploy` Command
 
