feat: create separate AWS credentials and AWS profiles articles

--- a/docs/how-to-guides/deployment/aws-credentials/credentials.mdx
+++ b/docs/how-to-guides/deployment/aws-credentials/credentials.mdx
@@ -1,12 +1,16 @@
 ---
-id: configure-aws-credentials
+id: credentials
 title: Configure AWS Credentials
 sidebar_label: Configure AWS Credentials
-keywords: ["webiny", "serverless", "open source", "graphql", "reactjs"]
+keywords: ["webiny", "aws", "credentials", "configure"]
 description: Configure AWS credentials.
 ---
 
-import YouTube from "../../mdxComponents/youtube";
+:::tip What you’ll learn
+- how to configure your AWS credentials for programmatic access
+:::
+
+import YouTube from "../../../mdxComponents/youtube";
 
 This article guides you through configuring your AWS credentials for programmatic access. At the end of the tutorial, you will have your API keys and region configured to successfully deploy Webiny to your AWS cloud.
 
@@ -137,53 +141,3 @@ region = YOUR_AWS_REGION
 This means that for your `default` profile, that particular region is used. -->
 
 And that's it! You now have your AWS credentials, your default region, and you're ready to deploy Webiny.
-
-## Using a Different AWS Profile Name
-
-If you would like to use a different name for your AWS profile, you can do that too.
-
-But do note that you will need to specify it before executing Webiny deployment-related commands, otherwise the `default` profile will be used.
-
-You can do that via the `AWS_PROFILE` environment variable, which you can set in a couple of ways. The easiest way to do it would be via the `.env` file, located in your project root, for example:
-
-```
-AWS_PROFILE=my-profile
-```
-
-Apart from that, the `AWS_PROFILE` environment variable can also be specified using a terminal of your choice, and a command that's available on your operating system. For example, on Linux or MacOS, you can use the [`export`](https://www.geeksforgeeks.org/export-command-in-linux-with-examples/) command:
-
-```
-export AWS_PROFILE=my-profile
-```
-
-On Windows, you can utilize the [`set`](https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/set_1) and [`setx`](https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/setx) commands, for example:
-
-```
-setx AWS_PROFILE my-profile
-```
-
-:::info
-Read more about profiles and how to set them up in the official [AWS documentation article](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-profiles.html).
-:::
-
-Once the `AWS_PROFILE` has been properly set via one of the shown methods, you can proceed with the deployment of your Webiny project.
-
-## FAQ
-
-#### Is there a way to check if my profile was set properly?
-
-If you have the [AWS CLI](https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-welcome.html) installed on your system, you can run the following command:
-
-```
-aws sts get-caller-identity
-```
-
-This should give an output similar to the following:
-
-```
-{
-    "Account": "x",
-    "UserId": "y",
-    "Arn": "arn:aws:iam::x:user/z"
-}
-```
