--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -7,7 +7,6 @@ description: Learn how to deploy your Webiny project and its project application
 ---
 
 :::tip What you’ll learn
-
 - how to deploy your project into multiple environments
 - how to deploy a single project application into multiple environments
 :::
@@ -19,7 +18,7 @@ Webiny makes it easy to deploy your project, using the [Webiny CLI](/docs/key-to
 ## AWS Credentials
 In order to deploy your Webiny project, you need to have AWS Credentials properly configured on your machine. Furthermore, you can also deploy your project using a specific AWS profile.
 
-To learn more, please check out the [Configure AWS Credentials](/docs/how-to-guides/deployment/configure-aws-credentials) guide.
+To learn more, please check out the [Configure AWS Credentials](/docs/how-to-guides/deployment/configure-aws-credentials) guide. If you're looking for information on how to use a  different AWS profile, feel free to skip to the [Using different AWS Profiles](/docs/how-to-guides/deployment/configure-aws-credentials#using-a-different-aws-profile-name) section.
 
 ## The `deploy` Command
 
