feat: create separate AWS credentials and AWS profiles articles

--- a/docs/how-to-guides/deployment/aws-credentials/credentials.mdx
+++ b/docs/how-to-guides/deployment/aws-credentials/credentials.mdx
@@ -1,5 +1,5 @@
 ---
-id: credentials
+id: configure-aws-credentials
 title: Configure AWS Credentials
 sidebar_label: Configure AWS Credentials
 keywords: ["webiny", "aws", "credentials", "configure"]
