--- a/docs/how-to-guides/deployment/aws-credentials/profiles.mdx
+++ b/docs/how-to-guides/deployment/aws-credentials/profiles.mdx
@@ -1,5 +1,5 @@
 ---
-id: profiles
+id: use-aws-profiles
 title: Use AWS Profiles
 sidebar_label: Use AWS Profiles
 keywords: ["webiny", "aws", "profiles", "configure"]
