--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -16,9 +16,9 @@ description: Learn how to deploy your Webiny project and its project application
 Webiny makes it easy to deploy your project, using the [Webiny CLI](/docs/key-topics/webiny-cli) and [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) as the default infrastructure as code and deployment solution. You can also easily deploy your project into multiple [environments](/docs/key-topics/deployment/environments), which is covered in this guide as well.
 
 ## AWS Credentials
-In order to deploy your Webiny project, you need to have AWS Credentials properly configured on your machine. Furthermore, you can also deploy your project using a specific AWS profile.
+In order to deploy your Webiny project, you need to have AWS Credentials properly configured on your system. Furthermore, you can also deploy your project using a specific AWS profile.
 
-To learn more, please check out the [Configure AWS Credentials](/docs/how-to-guides/deployment/configure-aws-credentials) guide. If you're looking for information on how to use a  different AWS profile, feel free to skip to the [Using different AWS Profiles](/docs/how-to-guides/deployment/configure-aws-credentials#using-a-different-aws-profile-name) section.
+To learn more about configuring your AWS credentials, please check out the [Configure AWS Credentials](/docs/how-to-guides/deployment/aws-credentials/configure-aws-credentials) guide. If you're looking for information on how to use different AWS profiles, feel free to skip to the [Use AWS Profiles](/docs/how-to-guides/deployment/aws-credentials/use-aws-profiles) guide.
 
 ## The `deploy` Command
 
