fix: add additional explanation in .env section

--- a/docs/how-to-guides/deployment/aws/profiles.mdx
+++ b/docs/how-to-guides/deployment/aws/profiles.mdx
@@ -21,16 +21,19 @@ Read more about profiles and how to set them up in the official [AWS documentati
 
 ## How To Use
 
-While executing deployment-related commands, for example [`deploy`](/docs/how-to-guides/deployment/deploy-your-project) or [`destroy`](/docs/how-to-guides/deployment/destroy-cloud-infrastructure), if not specified, Webiny will always use the `default` AWS profile.
+While executing deployment-related commands via the [Webiny CLI](/docs/key-topics/webiny-cli), for example [`deploy`](/docs/how-to-guides/deployment/deploy-your-project) or [`destroy`](/docs/how-to-guides/deployment/destroy-cloud-infrastructure), if not specified, Webiny will always use the `default` AWS profile.
 
 A different profile can be specified via the `AWS_PROFILE` environment variable, which you can set in a couple of ways.
 
 ### Using `.env` File
-The easiest way to do it would be via the `.env` file, located in your project root, for example:
+The easiest way to do it would be using the `.env` file, located in your project root, for example:
 
 ```console title=".env"
 AWS_PROFILE=my-profile
 ```
+
+The advantage of this approach is that you don't need to set the `AWS_PROFILE` via your terminal, but it always stays in the `.env` file, which is automatically loaded when executing mentioned deployment-related commands.
+
 
 ### Using Terminal
 Apart from setting it via the shown `.env` file, the `AWS_PROFILE` environment variable can also be set using a terminal of your choice, and a command that's available on your operating system.
