fix: use title case

--- a/docs/key-topics/deployment/iac-with-pulumi.mdx
+++ b/docs/key-topics/deployment/iac-with-pulumi.mdx
@@ -31,7 +31,7 @@ Webiny chose Pulumi as its default IaC solution for a couple of reasons:
 Note that Pulumi is the _default_ solution Webiny relies on, which means it doesn't have to be the only one. If you have a need to bring your own IaC solution (like CloudFormation or Terraform), you certainly can. Feel free to [message us](https://www.webiny.com/slack) if that's the case, we'd be glad to assist.
 :::
 
-## A closer look
+## A Closer Look
 
 <!-- vale off -->
 In the following folder structure, we are looking at three applications that are set up by default in a new Webiny project. These are the **API** (`./api`), **Admin Area** (`./apps/admin`), and **Website** (`./apps/website`), which are shown in the following directory structure (`code` folder omitted for brevity):
