fix: add different API setups section

--- a/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom.mdx
@@ -28,7 +28,9 @@ import { Box, Button, Grid, Link } from "theme-ui";
 
 ## Description
 
-During the creation of a new Webiny project, one of the questions that shows up is should your new project be deployed in a Virtual Private Cloud (VPC) or not. The answer to that question depends on your needs, but usually for production environments, having resources deployed in a custom VPC is a reasonable choice.
+As mentioned in the [introduction](/docs/key-topics/cloud-infrastructure/api/introduction) section, the **API** project application's cloud infrastructure comes with two setups - development and production. The difference between the two is a bit different setup when it comes to networking and Amazon ElasticSearch Service. In the production setup, these are configured a bit differently, mainly for improving your project's security posture and availability.
+
+Unlike in the development setup, where your project is deployed into the default VPC, in the production setup, your project is deployed into a custom Virtual Private Network (VPC), which we cover in this section.
 
 Note that the VPC setup presented here is a good foundation, but is not an ultimate solution. There is a chance that the setup might need additional cloud infrastructure resources or different configurations on your or your organization's behalf.
 
@@ -76,17 +78,11 @@ If this presents a problem, you may want to integrate a different solution, like
 
 Yes. The provided [cloud infrastructure code](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/api/pulumi_vpc) does provide a good foundation, but there might be cases where you'd want to make further adjustments.
 
-**Is it possible to switch from the default-VPC to the custom-VPC setup?**
-
-Yes, you'd just need to alter the cloud infrastructure code accordingly, and redeploy. This can probably be considered as a bigger change to your cloud infrastructure, so make sure to test the deployment before applying changes in your production environment. The [`--preview` flag](/docs/how-to-guides/deployment/preview-deployments) can also come in handy when doing this.
-
-**Is it possible to deploy the custom-VPC setup into the production environment only?**
-
-This can be done. Since the cloud infrastructure is defined using code, nothing prevents you from using a couple of `if` statements to determine which resources need to be deployed.
-
 **Is Amazon ElasticSearch Service <diagram-letter>h</diagram-letter> deployed into multiple AZs?**
 
-Currently it is deployed into a single AZ, just for cost reasons. But yes, production workloads should use two or three AZs. Check out the [Amazon ElasticSearch Service's FAQ page](https://aws.amazon.com/elasticsearch-service/faqs/) for more information.
+For the production setup, that is true. For development setup, it is deployed into a single AZ, just for cost reasons.
+
+Check out the [Amazon ElasticSearch Service's FAQ page](https://aws.amazon.com/elasticsearch-service/faqs/) for more information.
 
 **How is API Gateway <diagram-letter>B</diagram-letter> communicating with Lambda functions if it's outside of the VPC?**
 
