--- a/docs/key-topics/cloud-infrastructure/api/overview-vpc-default.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview-vpc-default.mdx
@@ -28,7 +28,9 @@ import { Box, Button, Grid, Link } from "theme-ui";
 
 ## Description
 
-During the creation of a new Webiny project, one of the questions that shows up is should your new project be deployed in a Virtual Private Cloud (VPC) or not. The answer to that question depends on your needs, but usually for development environments, having resources deployed in the default VPC is a reasonable choice.
+As mentioned in the [introduction](/docs/key-topics/cloud-infrastructure/api/introduction) section, the **API** project application's cloud infrastructure comes with two setups - development and production. The difference between the two is a bit different setup when it comes to networking and Amazon ElasticSearch Service. In the production setup, these are configured a bit differently, mainly for improving your project's security posture and availability.
+
+In the development setup, your project is deployed into the default Virtual Private Network (VPC), which is automatically created for every AWS Account.
 
 :::info
 Virtual Private Clouds (VPCs) is a topic that requires some general networking knowledge and knowledge on AWS-specific concepts like regions, availability zones, different network gateways, and so on. Be sure to [read about it](https://aws.amazon.com/vpc/) before going through this section.
@@ -46,8 +48,4 @@ As mentioned, the default VPC setup can be a reasonable choice when it comes to 
 
 **Is Amazon ElasticSearch Service <diagram-letter>h</diagram-letter> deployed into multiple AZs?**
 
-Currently it is deployed into a single AZ, just for cost reasons. But yes, production workloads should use two or three AZs. Check out the [Amazon ElasticSearch Service's FAQ page](https://aws.amazon.com/elasticsearch-service/faqs/) for more information.
-
-**Is it possible to switch from the default VPC to the custom VPC setup?**
-
-Yes, you'd just need to alter the cloud infrastructure code accordingly, and redeploy. This can probably be considered as a bigger change to your cloud infrastructure, so make sure to test the deployment before applying changes in your production environment. The [`--preview` flag](/docs/how-to-guides/deployment/preview-deployments) can also come in handy when doing this.
+In the `dev` setup, it is deployed into a single AZ, just for cost reasons. But yes, production workloads should use two or three AZs, hence the `prod` setup. Check out the [Amazon ElasticSearch Service's FAQ page](https://aws.amazon.com/elasticsearch-service/faqs/) for more information.
