--- a/docs/key-topics/deployment/environments.mdx
+++ b/docs/key-topics/deployment/environments.mdx
@@ -67,4 +67,8 @@ This can be done. Since the cloud infrastructure is defined using code, nothing 
 
 **Is it reasonable to have different cloud infrastructure deployed based on the environment?**
 
-In certain cases, this might be reasonable. For example, you can reduce development costs by not deploying VPCs (and related cloud infrastructure resources) for development environments. You only deploy the full set of cloud infrastructure resources into **staging** and **production** environments.
+In certain cases, this might be reasonable. For example, you can reduce development costs by not deploying custom VPCs (and related cloud infrastructure resources) for development environments. You only deploy the full set of cloud infrastructure resources into **staging** and **production** environments.
+
+:::info
+Depending on the environment, the **API** project application is deployed as two different sets of cloud infrastructure resources - development and production. Visit the [API Introduction](/docs/key-topics/cloud-infrastructure/api/introduction#different-cloud-infrastructure-setups) key topic to learn more.
+:::
