fix: add information on resources tagging

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -15,10 +15,19 @@ description: Learn how to deploy your Webiny project and its project application
 
 Webiny makes it easy to deploy your project, using the [Webiny CLI](/docs/key-topics/webiny-cli) and [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) as the default infrastructure as code and deployment solution. You can also easily deploy your project into multiple [environments](/docs/key-topics/deployment/environments), which is covered in this guide as well.
 
-## AWS Credentials
+## Before We Begin
+### AWS Credentials
 In order to deploy your Webiny project, you need to have AWS Credentials properly configured on your system. Furthermore, you can also deploy your project using a specific AWS profile.
 
 To learn more about configuring your AWS credentials, please check out the [Configure AWS Credentials](/docs/how-to-guides/deployment/aws/configure-aws-credentials) guide. If you're looking for information on how to use different AWS profiles, feel free to skip to the [Use AWS Profiles](/docs/how-to-guides/deployment/aws/use-aws-profiles) guide.
+
+### Tagged Resources
+
+Note that, in order to more easily filter out the cloud infrastructure resources deployed by your Webiny project, most of the resources are tagged with the following tags:
+
+- `WbyProjectName` - the name of your project (declared in your `webiny.root.js` file)
+- `WbyEnvironment` - the environment of which the resource is part of
+
 
 ## The `deploy` Command
 
