--- a/docs/how-to-guides/ci-cd/introduction.mdx
+++ b/docs/how-to-guides/ci-cd/introduction.mdx
@@ -5,5 +5,25 @@ sidebar_label: Introduction
 keywords: ["webiny", "ci", "cd", "development", "workflows", "introduction"]
 description: Introduction to CI/CD how-to guides section.
 ---
+:::tip What you'll learn
+- what does it mean to develop serverless
+- two
+:::
 
-This article is work in progress. Please be patient for just a little bit.
+## Overview
+
+The process of application development is much more than just writing code. It entails several different subprocesses, which are equally, if not more, important. For example:
+
+- testing application code
+- organizing VCS branches
+- deployment into multiple environments
+- application and cloud infrastructure security
+- [monitoring and observability](https://thenewstack.io/monitoring-vs-observability-whats-the-difference/)
+- team organization
+- and more
+
+In this following sections, we cover some of these subprocesses and provide best practices around them.
+
+:::info
+To learn more about the CI/CD workflows in general, please take a look at the [CI/CD](/docs/key-topics/ci-cd) key topic.
+:::
