--- a/docs/how-to-guides/upgrade-webiny/5.0.0-beta.4-to-5.0.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.0.0-beta.4-to-5.0.0.mdx
@@ -41,7 +41,7 @@ In any case, if you have any additional questions or concerns, please don't hesi
 
 :::caution
 
-This guide contains many manual steps. If the circumstances allow it, we recommend you create a new Webiny 5.0.0 project from scratch.
+This guide contains many manual steps. If the circumstances allow it, we recommend you [create a new Webiny 5.0.0 project](/docs/tutorials/install-webiny) from scratch.
 
 :::
 
